--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,10 @@
 
 <!-- Bootstrap 5 JS (Optional) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
